added entry for Tyler's Serpent 2 model

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -754,4 +754,10 @@ Model credibility can be established through verification and validation (V\&V) 
   publisher = {American Nuclear Society},
 }
 
+@Misc{Law2022,
+  author = {Law, Tyler},
+  title  = {{Serpent} 2 {Model} for the {Oregon} {State} {University} {TRIGA} {Reactor}},
+  year   = {2022},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
