added henri nureth-19 paper

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -760,4 +760,13 @@ Model credibility can be established through verification and validation (V\&V) 
   year   = {2022},
 }
 
+@InProceedings{HENRInureth19,
+  author    = {A. Warren and A. Camargo and G. Mignot and W. Marcum},
+  booktitle = {Proceedings of The 19th International Topical Meeting on Nuclear Reactor Thermal Hydraulics (NURETH-19)},
+  title     = {Experiments on the Helium-3 Negative Reactivity Insertion (HENRI) Prototype and Fast Opening Valve},
+  year      = {2022},
+  address   = {Brussels, Belgium},
+  month     = mar,
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
