added Tracey's thesis.

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -769,4 +769,15 @@ Model credibility can be established through verification and validation (V\&V) 
   month     = mar,
 }
 
+@MastersThesis{SpoererThesis,
+  author   = {Tracey Spoerer},
+  school   = {Oregon State University},
+  title    = {Control Rod Shadowing Effects in Control Rod Calibrations of the Oregon State TRIGA Reactor},
+  year     = {2022},
+  month    = jun,
+  abstract = {Control rod calibration experiment results for the Oregon State TRIGA® Reactor (OSTR) immediately following LEU conversion in 2008, and MCNP® 5 predicted rod worths from the 2008 LEU Conversion Safety Analysis Report (CSAR) are discussed. The reactivity worth of the four OSTR control rods are measured using the rod-pull method. Reactor power and period measurements in this method rely on the fission chamber power detector on the North side of the reflector. It is proposed that the location of the fission chamber gives rise to a phenomenon known as control rod shadowing, or an inaccurate reactor period measurement due to the asymmetry of the neutron flux distribution in the OSTR core. The effect or asymmetry of the flux is believed to be more pronounced during super-criticality, resulting in error in the time-of-power-rise measurements. As a result, control rod calibration experiments may under-predict or over-predict the reactivity worth of certain control rods. A time-independent Monte-Carlo method for the quantification of control rod shadowing is developed and validated. Thermal flux maps at core axial mid-plane are obtained from the model to inform discrepancies between predicted and observed results.},
+  file     = {:Z\:/Quality Facilities/3. Individual Workers/Austin Warren/THESIS/LitReview/LitReview/TRIGA/SpoererTraceyT2022.pdf:PDF},
+  url      = {https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/ng451r63q},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
