added star-ccm+ reference to bibtex file

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -780,4 +780,11 @@ Model credibility can be established through verification and validation (V\&V) 
   url      = {https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/ng451r63q},
 }
 
+@Software{starccm,
+  author  = {{Siemens Digital Industries Software}},
+  title   = {Simcenter \uppercase{STAR-CCM+}, version 2020.2.1},
+  version = {{2020.2.1}},
+  year    = {2020},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
