added Serpent version citation.

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -794,4 +794,10 @@ Model credibility can be established through verification and validation (V\&V) 
   version = {{2020.2}},
 }
 
+@Misc{VTRCF,
+  author  = {{{VTT} {Technical} {Research} {Center} of {Finland}}},
+  title   = {{Serpent} {Monte} {Carlo} code, version 2.1.31},
+  version = {{2.1.31}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
