added references for ATF.

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -800,4 +800,21 @@ Model credibility can be established through verification and validation (V\&V) 
   version = {{2.1.31}},
 }
 
+@Misc{ATFNRC,
+  author       = {{U.S. Nuclear Regulatory Commission}},
+  howpublished = {web},
+  month        = oct,
+  title        = {{Accident} {Tolerant} {Fuel} {Regulatory} {Activities}},
+  year         = {2022},
+  url          = {https://www.nrc.gov/reactors/atf.html},
+}
+
+@Misc{NEIMA,
+  author = {{{115th} {U.S.} {Congress}}},
+  month  = jan,
+  title  = {Nuclear Energy Innovation and Modernization Act},
+  year   = {2019},
+  url    = {https://www.congress.gov/bill/115th-congress/senate-bill/512/text},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
