added updated triga SAR and Omega PT datasheet.

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -817,4 +817,19 @@ Model credibility can be established through verification and validation (V\&V) 
   url    = {https://www.congress.gov/bill/115th-congress/senate-bill/512/text},
 }
 
+@TechReport{ostrSAR,
+  author      = {{Oregon State University TRIGA Reactor}},
+  institution = {Oregon State University},
+  title       = {{OSTR} {Safety} {Analysis} {Report}},
+  year        = {2012},
+  file        = {:TRIGA/OSTR-R-106-SAR-as-amended-DRAFT.pdf:PDF},
+}
+
+@TechReport{omegaPX409,
+  author = {{Omega Engineering, Inc.}},
+  title  = {{PX409} {Series} {Datasheet}},
+  file   = {:Instrumentation/PX409_Series.pdf:PDF},
+  url    = {https://www.omega.com/en-us/pressure-measurement/pressure-transducers/p/PX409-Series},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
