added Tyler's thesis and updated the entry. also cleaned up some of the entries titles to appear better in document.

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -489,15 +489,15 @@ within the 5 ms. limit assuming an ultra-fast opening device.},
 
 @Software{Leingang2021,
   author = {Cole Leingang},
-  title  = {CONSTELATION},
+  title  = {{CONSTELATION}},
   year   = {2021},
 }
 
 
-@Misc{,
+@Misc{TRIGAweb,
   howpublished = {\url{https://radiationcenter.oregonstate.edu/oregon-state-triga-reactor-0}},
   note         = {Accessed: Jun 29, 2022},
-  title        = {Oregon State TRIGA Reactor},
+  title        = {{Oregon} {State} {TRIGA} {Reactor}},
   school       = {Oregon State University Radiation Center},
   url          = {https://radiationcenter.oregonstate.edu/oregon-state-triga-reactor-0},
 }
@@ -754,10 +754,15 @@ Model credibility can be established through verification and validation (V\&V) 
   publisher = {American Nuclear Society},
 }
 
-@Misc{Law2022,
+@MastersThesis{LawThesis,
   author = {Law, Tyler},
-  title  = {{Serpent} 2 {Model} for the {Oregon} {State} {University} {TRIGA} {Reactor}},
-  year   = {2022},
+  school = {Oregon State University},
+  title  = {{Benchmark} {Comparison} of the {Oregon} {State} {TRIGA} {Reactor} {Between} {MCNP6} and {Serpent} 2},
+  year   = {2023},
+  month  = mar,
+  type   = {{Master's} {Thesis}},
+  file   = {:TRIGA/LawTylerC2023.pdf:PDF},
+  url    = {https://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/qv33s518m},
 }
 
 @InProceedings{HENRInureth19,
@@ -772,7 +777,7 @@ Model credibility can be established through verification and validation (V\&V) 
 @MastersThesis{SpoererThesis,
   author   = {Tracey Spoerer},
   school   = {Oregon State University},
-  title    = {Control Rod Shadowing Effects in Control Rod Calibrations of the Oregon State TRIGA Reactor},
+  title    = {{Control} {Rod} {Shadowing} {Effects} in {Control} {Rod} {Calibrations} of the {Oregon} {State} {TRIGA} {Reactor}},
   year     = {2022},
   month    = jun,
   abstract = {Control rod calibration experiment results for the Oregon State TRIGA® Reactor (OSTR) immediately following LEU conversion in 2008, and MCNP® 5 predicted rod worths from the 2008 LEU Conversion Safety Analysis Report (CSAR) are discussed. The reactivity worth of the four OSTR control rods are measured using the rod-pull method. Reactor power and period measurements in this method rely on the fission chamber power detector on the North side of the reflector. It is proposed that the location of the fission chamber gives rise to a phenomenon known as control rod shadowing, or an inaccurate reactor period measurement due to the asymmetry of the neutron flux distribution in the OSTR core. The effect or asymmetry of the flux is believed to be more pronounced during super-criticality, resulting in error in the time-of-power-rise measurements. As a result, control rod calibration experiments may under-predict or over-predict the reactivity worth of certain control rods. A time-independent Monte-Carlo method for the quantification of control rod shadowing is developed and validated. Thermal flux maps at core axial mid-plane are obtained from the model to inform discrepancies between predicted and observed results.},
@@ -830,6 +835,14 @@ Model credibility can be established through verification and validation (V\&V) 
   title  = {{PX409} {Series} {Datasheet}},
   file   = {:Instrumentation/PX409_Series.pdf:PDF},
   url    = {https://www.omega.com/en-us/pressure-measurement/pressure-transducers/p/PX409-Series},
+}
+
+@Misc{pyGCS,
+  author = {{Tom Robin Teschner}},
+  month  = jul,
+  title  = {{pyGCS}, version 1.1.1},
+  year   = {2022},
+  url    = {https://pypi.org/project/pyGCS/},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
