added zenodo archive for ostr-constelation first success release.

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -859,4 +859,15 @@ Model credibility can be established through verification and validation (V\&V) 
   url          = {https://www.osti.gov/biblio/1808379},
 }
 
+@Misc{ostr-constelation v0.6.0,
+  author    = {Austin Warren},
+  month     = may,
+  title     = {{OSTR-CONSTELATION}: {First} {Release}},
+  year      = {2023},
+  doi       = {10.5281/zenodo.7901570},
+  publisher = {Zenodo},
+  url       = {https://doi.org/10.5281/zenodo.7901570},
+  version   = {v0.6.0},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
