added astronomer reference. updated serpentTools reference.

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -687,10 +687,10 @@ Model credibility can be established through verification and validation (V\&V) 
   url      = {https://www.sciencedirect.com/science/article/pii/S0306454914004095},
 }
 
-@Article{Johnson2020,
+@Article{serpentTools,
   author    = {Andrew E. Johnson and Dan Kotlyar and Stefano Terlizzi and Gavin Ridley},
   journal   = {Nuclear Science and Engineering},
-  title     = {serpentTools: A Python Package for Expediting Analysis with Serpent},
+  title     = {{serpentTools:} {A} {Python} {Package} {for} {Expediting} {Analysis} {with} {Serpent}},
   year      = {2020},
   number    = {11},
   pages     = {1016-1024},
@@ -868,6 +868,13 @@ Model credibility can be established through verification and validation (V\&V) 
   publisher = {Zenodo},
   url       = {https://doi.org/10.5281/zenodo.7901570},
   version   = {v0.6.0},
+}
+
+@Misc{astronomer,
+  author = {Austin Warren},
+  title  = {{astronomer:} {A} {Data} {Processing} {Package} {for} {CONSTELATION}},
+  year   = {2023},
+  url    = {https://github.com/warrenau/astronomer},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
