added citation for adiabatic wall condition ostr-constelation model archived on zenodo.

--- a/LitReview.bib
+++ b/LitReview.bib
@@ -877,4 +877,15 @@ Model credibility can be established through verification and validation (V\&V) 
   url    = {https://github.com/warrenau/astronomer},
 }
 
+@Misc{ostr-constelation v0.6.1,
+  author    = {Austin Warren},
+  month     = may,
+  title     = {{OSTR-CONSTELATION: Adiabatic Wall Condition}},
+  year      = {2023},
+  doi       = {10.5281/zenodo.7975559},
+  publisher = {Zenodo},
+  url       = {https://doi.org/10.5281/zenodo.7975559},
+  version   = {v0.6.1},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
